[project]
name = "diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "transformers==4.57.1",
    "tokenizers==0.22.1",
    "pillow==12.0.0",
    "tqdm==4.67.1",
    "numpy==2.2.6",
    "scipy==1.16.3",
    "opencv-python==4.12.0.88",
    "matplotlib==3.10.7",
    "sympy==1.14.0",
    "huggingface-hub==0.36.0",
    "imageio==2.37.0"
]